syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.cluper.course_registration";
option java_outer_classname = "University";

package university;

service SearchService{
	rpc GetAllStudents(Empty) returns (Students);
	rpc GetAllCourses(Empty) returns (Courses);
	rpc AddStudent(Student) returns (ResponseMessage);
	rpc DeleteStudent(Student) returns (ResponseMessage);
	rpc AddCourse(Course) returns (ResponseMessage);
	rpc DeleteCourse(Course) returns (ResponseMessage);
	rpc MakeRegistration(Registration) returns (ResponseMessage);
}

message Students{
	repeated Student students = 1;
}

message Courses{
	repeated Course course = 1;
}

message Registration{
	string student_id = 1;
	repeated string course_id = 2;
}

message Student {
	string student_id = 1;
	string last_name = 2;
	string first_name = 3;
	string department = 4;
	repeated string course_id = 5;
}

message Course{
	string course_id = 1;
	string prof_name = 2;
	string course_name = 3;
}

message Empty{

}

message ResponseMessage{
	bool success = 1;
	string message = 2;
}